# filedl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
assets/: gallery.js  style.scss
proptest-regressions/: breadcrumbs.txt  thumbnails.txt
src/: app_data.rs  breadcrumbs.rs  config.rs  error.rs  main.rs  pages.rs  storage.rs  thumbnails.rs
src/templates/: dir_listing.rs  mod.rs  page.rs  util.rs
templates/: base.html  dir_listing.html  gallery.js  style.css
zippity/: todo.txt  zip-analysis.txt
zippity/proptest-regressions/: lib.txt
zippity/src/: lib.rs  structs.rs
