[package]
name = "filedl"
description = "A simple web app for public file downloads."
repository = "https://github.com/bluecube/filedl"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
anyhow = "1.0.75"
askama = "0.12.1"
assert2 = "0.3.11"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.3", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
figment = { version = "0.10.11", features = ["toml", "env"] }
image = "0.24.7"
kamadak-exif = "0.5.5"
lru = "0.12.0"
mime = "0.3.17"
relative-path = { version = "1.9.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["sync", "fs"] }

[dev-dependencies]
proptest = "1.3.1"
test-strategy = "0.3.1"

#exif
#zipit https://crates.io/crates/zipit
